# PhoBERT-TelecomGate

./: .env.example  .gitignore  README.md  docker-compose.yml  docker.env.example  pyproject.toml
dockerfiles/phobert-sentiment/: Dockerfile
dockerfiles/phobert-telecomgate/: Dockerfile
dockerfiles/rdr-segmenter/: Dockerfile
dockerfiles/rdrsegmenter/: Dockerfile
main/: __main__.py
main/DOWNLOAD_MODELS/: __init__.py
main/SEGMENT/: __init__.py
main/SERVER/: __init__.py
main/data/: loader.py
main/emo/: __init__.py  process_emojis.py  process_emojis_and_emoticons_if_enabled.py  process_emoticons.py
main/finetuning/: common.py
main/models/: __init__.py  common.py  get_classifier.py  get_tokenizer.py
