[project]
name = "phobert-sentiment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "click>=8.3.0",
    "datasets>=4.4.1",
    "emoji>=2.15.0",
    "protobuf>=6.33.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
